--- a/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/Categories/Default.cshtml
+++ b/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/Categories/Default.cshtml
@@ -9,7 +9,7 @@
                     <div class="categories__text">
                         <h1>@Model[0].Name</h1>
                         <p>@Model[0].Description</p>
-                        <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-categoryUrl="@Model[0].Id">Alışveriş Yap</a>
+                        <a href="/urunler/@Model[0].Url">Alışveriş Yap</a>
                     </div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                                 <div class="categories__text">
                                     <h4>@Model[i].Name</h4>
                                     <p>@Model[i].Description</p>
-                                    <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-id="@Model[i].Id">Alışveriş Yap</a>
+                                    <a href="/urunler/@Model[0].Url">Alışveriş Yap</a>
                                 </div>
                             </div>
                         </div>
