admin paneldeki copsepeti linkler ve anasayfa kategorilerindeki link sorunu giderildi

--- a/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/Categories/Default.cshtml
+++ b/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Views/Shared/Components/Categories/Default.cshtml
@@ -22,7 +22,7 @@
                                 <div class="categories__text">
                                     <h4>@Model[i].Name</h4>
                                     <p>@Model[i].Description</p>
-                                    <a href="/urunler/@Model[0].Url">Alışveriş Yap</a>
+                                    <a href="/urunler/@Model[i].Url">Alışveriş Yap</a>
                                 </div>
                             </div>
                         </div>
