--- a/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Product/Index.cshtml
+++ b/Section-11-Identity/Week-21/09-03-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
                     <h1>Ürün Listesi @(ViewBag.ShowDeleted ? "Çöp Kutusu": "")</h1>
                 </div>
                 <div>
-                    <a href="yonetici/urunler/@(!ViewBag.ShowDeleted)"
+                    <a href="@(ViewBag.WhatIsShowing)"
                        @*  asp-area="Admin" *@
                        @* asp-controller="Product" *@
                        @* asp-action="Index" *@
